<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TRAPS-CK Equipes</string>
    <string name="OK">OK</string>
    <string name="cancel">Annuler</string>
    <string name="BiblistActivity_title">TRAPS-CK Equipes 1.0</string>
    <string name="BiblistActivity_disconnect_ffcanoe">Déconnexion FFCanoe</string>
    <string name="BiblistActivity_connect_ffcanoe">Connexion FFCanoe</string>
    <string name="BiblistActivity_no_bib">Aucun dossard</string>
    <string name="BiblistActivity_delete_penalty_title">Effacer pénalités</string>
    <string name="BiblistActivity_delete_penalty_are_you_sure">Effacer toutes les données de ce terminal ?</string>
    <string name="BiblistActivity_how_many_bibs">Combien de dossards ?</string>
    <string name="BiblistActivity_not_connected_to_ffcanoe">Non connecté à FFCanoe</string>
    <string name="BiblistActivity_delete_the_selected_bib">Effacer le dossard sélectionné ?</string>
    <string name="BiblistActivity_delete_the">Effacer les</string>
    <string name="BiblistActivity_selected_bibs">dossards sélectionnés ?</string>
    <string name="BiblistActivity_close_app_title">Fermer TRAPS-CK ?</string>
    <string name="BiblistActivity_close_app_message">Si vous fermez cette application, les pénalités envoyées par les terminaux ne seront plus traitées</string>
    <string name="BiblistActivity_create_or_load_bib_first">Créez ou charger d\'abord une liste de dossards</string>
    <string name="BiblistActivity_terminal">Terminal</string>
    <string name="TerminalActivity_not_connected_to_ffcanoe">Non connecté à FFCanoe</string>
    <string name="TerminalActivity_disconnect_ffcanoe">Déconnexion FFCanoe</string>
    <string name="TerminalActivity_connect_ffcanoe">Connexion FFCanoe</string>
    <string name="TerminalActivity_send_penalties">Envoyer les pénalités ?</string>
    <string name="TerminalActivity_close_terminal">Fermer le terminal ?</string>
    <string name="TerminalActivity_selecting_gates_title">Choix des portes</string>
    <string name="TerminalActivity_selecting_gates_message">Changer le numéro des portes entraine l\'effacement des pénalités de ce terminal. Continuer ?</string>
    <string name="TerminalActivity_delete_penalty_title">Effacer pénalités</string>
    <string name="TerminalActivity_delete_penalty_are_you_sure">Effacer toutes les données de ce terminal ?</string>
    <string name="TerminalActivity_sms_receiver">Numéro du récepteur SMS:</string>
    <string name="TerminalActivity_license_number">Numéro de licence:</string>
    <string name="TerminalActivity_license">Licence</string>
    <string name="TerminalActivity_license_accepted">Numéro de licence accepté</string>
    <string name="TerminalActivity_license_refused">Numéro de licence refusé</string>
    <string name="TerminalActivity_license_no_more_sending">Numéro de licence refusé</string>
    <string name="TerminalActivity_title">TRAPS-CK Equipes 1.0 | Terminal</string>
    <string name="SenderListActivity_title">Numéros émetteurs autorisés</string>
    <string name="SenderListActivity_addDAddress">Numéro émetteur:</string>
    <string name="SenderListActivity_no_device_specified">Aucun numéro spécifié. Les pénalités provenant de tout terminal seront acceptées.</string>
    <string name="FFCanoeDialog_title">Connexion FFCanoe</string>
    <string name="FFCanoeDialog_ip_address">Adresse IP:</string>
    <string name="FFCanoeDialog_port_number">Numéro de port:</string>
    <string name="FFCanoeDialog_connect">Connecter</string>
    <string name="FFCanoeDialog_run1">Manche 1</string>
    <string name="FFCanoeDialog_run2">Manche 2</string>
    <string name="FFCanoeHelper_error_title">Erreur connexion FFCanoe</string>
    <string name="FFCanoeHelper_error_message">Impossible de se connecter à FFCanoe. Vérifiez la connexion WIFI, l\'adresse IP et le numéro de port.</string>
    <string name="TRAPSLoaderDialog_title">Connexion TRAPSManager</string>
    <string name="TRAPSLoaderDialog_ip_address">Adresse IP:</string>
    <string name="TRAPSLoaderDialog_port_number">Numéro de port:</string>
    <string name="TRAPSLoaderDialog_connect">Connecter</string>
    <string name="CreateListTask_title">Création liste</string>
    <string name="CreateListTask_message">Un instant svp...</string>
    <string name="ResetPenaltyTask_title">Effacer pénalités</string>
    <string name="ResetPenaltyTask_message">Un instant svp...</string>
    <string name="TRAPSLoaderTask_title">Connexion TRAPSManager</string>
    <string name="TRAPSLoaderTask_no_bib_loaded">Aucun dossard chargé.</string>
    <string name="TRAPSLoaderTask_cannot_connect">Impossible de joindre</string>
    <string name="TRAPSLoaderTask_error_message">Erreur pendant le chargement.</string>
    <string name="TRAPSLoaderTask_error_title">Erreur TRAPSManager</string>
    <string name="TRAPSLoaderTask_connection">Connexion TRAPSManager</string>
    <string name="TRAPSLoaderTask_loading">Chargement dossards...</string>
    <string name="trapsloader_ip_address">Adresse IP: </string>
    <string name="ffcanoe_ip_address">Adresse IP: </string>
    <string name="ffcanoe_connect">Port: </string>
    <string name="ffcanoe_connect_port">Port: </string>
    <string name="ffcanoe_connect_run1">Manche 1</string>
    <string name="ffcanoe_connect_run2">Manche 2</string>
    <string name="ffcanoe_connect_button">Connecter</string>
    <string name="FFCanoeConnectActivity_title">Connexion à FFCanoe</string>
    <string name="loader_activity_title">Connexion à TRAPSManager</string>
    <string name="loader_connect_button">Connecter</string>
    <string name="param_address">Destinataire SMS:</string>
    <string name="param_imei_text">Pour obtenir un numéro de licence, envoyez ce code à contact@traps-ck.com</string>
    <string name="param_activity_title">Paramètres</string>
    <string name="title_license_activity">Licence</string>
    <string name="title_sms_activity">Destinataire SMS</string>
    <string name="title_transfer_activity">Configuration envoi pénalités</string>
    <string name="title_activity_chrono">ChronoActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_chrono_config">ChronoConfigActivity</string>

</resources>