<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="#000000"
    android:orientation="vertical" >

    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/ffcanoe_ip_address"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="right" >

            <Button
                android:id="@+id/buttonDeleteFFCanoeIP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="  Vider  " />

          
        </LinearLayout>

    </LinearLayout>
    
    
   
        <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/ffanoeAddress1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLength="3"
            android:gravity="center_vertical|center_horizontal"
            android:inputType="number" />

        <TextView
            android:id="@+id/dot1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="."
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/ffcanoeAddress2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:layout_weight="1"
            android:maxLength="3"
            android:inputType="number" 
          />

        <TextView
            android:id="@+id/dot2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="."
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
        <EditText
            android:id="@+id/ffcanoeAddress3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:layout_weight="1"
            android:maxLength="3"
            android:inputType="number" />
        
        <TextView
            android:id="@+id/dot3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="."
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/ffcanoeAddress4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLength="3"
            android:gravity="center_vertical|center_horizontal"
            android:inputType="number" />

    </LinearLayout>
    
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="right" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ffcanoe_connect_port"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/editPortFFCanoe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="4"
            android:gravity="center_vertical|center_horizontal"
            android:inputType="number" >

        </EditText>

    </LinearLayout>

  <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceLarge" />
  
    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center"
        android:orientation="horizontal" >


        <RadioButton
            android:id="@+id/radioRun1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20sp"
            android:checked="true"
            android:text="@string/ffcanoe_connect_run1"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <RadioButton
            android:id="@+id/radioRun2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Manche 2"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </RadioGroup>

    <CheckBox
        android:id="@+id/forwardPenalty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="Faire suivre PÉNALITÉS"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <CheckBox
        android:id="@+id/forwardChrono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Faire suivre CHRONOS"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="bottom|fill_vertical"
        android:gravity="bottom"
        android:orientation="vertical" >

        <Button
            android:id="@+id/buttonConnect"
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:layout_gravity="bottom"
            android:text="@string/ffcanoe_connect_button"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

</LinearLayout>