<?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:background="#000000"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/trapsloader_ip_address"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="right" >

            <Button
                android:id="@+id/buttonDeleteIP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="  Vider  " />

          
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/loaderAddress1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLength="3"
            android:gravity="center_vertical|center_horizontal"
            android:inputType="number" />

        <TextView
            android:id="@+id/dot1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="."
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/loaderAddress2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:layout_weight="1"
            android:maxLength="3"
            android:inputType="number" 
          />

        <TextView
            android:id="@+id/dot2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="."
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
        <EditText
            android:id="@+id/loaderAddress3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:layout_weight="1"
            android:maxLength="3"
            android:inputType="number" />
        
        <TextView
            android:id="@+id/dot3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="."
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/loaderAddress4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLength="3"
            android:gravity="center_vertical|center_horizontal"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ffcanoe_connect_port"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/editPortLoader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="4"
            android:gravity="center_vertical|center_horizontal"
            android:inputType="number" >

        </EditText>

    </LinearLayout>

   

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="bottom|fill_vertical"
        android:gravity="bottom"
        android:orientation="horizontal" >


        <Button
            android:id="@+id/LoaderButtonConnect"
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:layout_gravity="bottom"
            android:text="@string/loader_connect_button"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

</LinearLayout>